cosfx instead of sprietcontrol

--- a/goboscript.toml
+++ b/goboscript.toml
@@ -1,2 +1,2 @@
 [dependencies]
-spritecontrol = "https://github.com/FAReTek1/spritecontrol@v0.0.4"
+cosfx = "https://github.com/FAReTek1/cosfx@v0.0.1"
