--- a/test/goboscript.toml
+++ b/test/goboscript.toml
@@ -1,7 +1,8 @@
 no_miscellaneous_limits = false
 no_sprite_fencing = false
 frame_interpolation = false
-high_quality_pen = false
+high_quality_pen = true
+frame_rate=60
 
 [dependencies]
-pengine = "https://github.com/FAReTek1/pengine@v0.0.0b5"
+pengine = "https://github.com/FAReTek1/pengine@v0.0.0b6"
